--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -17,7 +17,13 @@
 				<h1 id="component-title">
 					FindChan
 				</h1>
-				<p id="jumbotron-text">Web application that finds local TV listings and displays information given a user's inquiry. It comes in handy when one wants to know what channel and when a tv show is playing on it (vice versa), respective to it's cable provider's listing. The user can query for channels, channel numbers, tv shows, and cable provider listings.
+				<p id="jumbotron-text">
+					Web application that finds local TV listings and displays information given a user's inquiry. It comes in handy when one wants to know what channel and when a tv show is playing on it (vice versa), respective to it's cable provider's listing. The user can query for channels, channel numbers, tv shows, and cable provider listings.
+				</p>
+				<p id="jumbotron-button">
+					<a href="#" class="btn btn-primary btn-lg" role="button">
+						Continue &raquo;
+					</a>
 				</p>
 			</div>
 		</div>
