--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -46,9 +46,9 @@
 				About
 			</a>
 		</li>
-		<li id="menu-item-simple" class="{{menuItemClass 'customers'}}">
-			<a href="{{pathFor 'customers'}}">
-				Channel View
+		<li id="menu-item-simple" class="{{menuItemClass 'tvlistingspage'}}">
+			<a href="{{pathFor 'tvlistingspage'}}">
+				TV Listing View
 			</a>
 		</li>
 	</ul>
