--- a/client/views/tvlistingspage/insert/insert.html
+++ b/client/views/tvlistingspage/insert/insert.html
@@ -1,4 +1,4 @@
-<template name="CustomersEdit">
+<template name="TvlistingspageInsert">
 	<div class="page-container container" id="content">
 		<div class="row" id="title_row">
 			<div class="col-md-12">
@@ -6,14 +6,14 @@
 				</div>
 			</div>
 		</div>
-		{{> CustomersEditEditForm}}
+		{{> TvlistingspageInsertInsertForm}}
 	</div>
 </template>
 
-<template name="CustomersEditEditForm">
+<template name="TvlistingspageInsertInsertForm">
 	<div class="">
 		<h2 id="component-title">
-			Edit customer
+			New TV Listing
 		</h2>
 		<form id="form" role="form">
 			{{#if errorMessage}}
@@ -27,48 +27,48 @@
 				{{infoMessage}}
 			</div>
 			{{/if}}
-			<div class="form-group text field-name">
+			<div class="form-group  field-name">
 				<label for="name">
 					Name
 				</label>
 				<div class="input-div">
-					<input type="text" name="name" value="{{customer.name}}" class="form-control" autofocus="autofocus" required="required" data-type="string">
+					<input type="text" name="name" value="" class="form-control" autofocus="autofocus" required="required">
 					<span id="help-text" class="help-block">
 					</span>
 					<span id="error-text" class="help-block">
 					</span>
 				</div>
 			</div>
-			<div class="form-group text field-phone">
-				<label for="phone">
-					Phone
+			<div class="form-group  field-channelname">
+				<label for="channelname">
+					Channel Name
 				</label>
 				<div class="input-div">
-					<input type="text" name="phone" value="{{customer.phone}}" class="form-control" data-type="string">
+					<input type="text" name="channelname" value="" class="form-control">
 					<span id="help-text" class="help-block">
 					</span>
 					<span id="error-text" class="help-block">
 					</span>
 				</div>
 			</div>
-			<div class="form-group text field-email">
-				<label for="email">
-					E-mail
+			<div class="form-group  field-channelnumber">
+				<label for="channelnumber">
+					Channel Number
 				</label>
 				<div class="input-div">
-					<input type="text" name="email" value="{{customer.email}}" class="form-control" data-type="email">
+					<input type="text" name="channelnumber" value="" class="form-control">
 					<span id="help-text" class="help-block">
 					</span>
 					<span id="error-text" class="help-block">
 					</span>
 				</div>
 			</div>
-			<div class="form-group text field-note">
-				<label for="note">
-					Note
+			<div class="form-group  field-cableprovider">
+				<label for="cableprovider">
+					Cable Provider
 				</label>
 				<div class="input-div">
-					<textarea class="form-control" name="note">{{customer.note}}</textarea>
+					<input type="text" name="cableprovider" value="" class="form-control">
 					<span id="help-text" class="help-block">
 					</span>
 					<span id="error-text" class="help-block">
