test http call to TVRage

--- a/client/views/tvlistingspage/tvlistingspage.html
+++ b/client/views/tvlistingspage/tvlistingspage.html
@@ -22,6 +22,11 @@
 					</span>
 					Add new
 				</button>
+                <button type="submit" id="dataview-testhttp-button" class="btn btn-success">
+					<span class="fa fa-plus">
+					</span>
+                    Test HTTP Get - TVRage
+                </button>
 			</div>
 			<div id="dataview-controls-search">
 				{{#if isNotEmpty}}
