http get request to TVRage

--- a/client/views/tvlistingspage/tvlistingspage.html
+++ b/client/views/tvlistingspage/tvlistingspage.html
@@ -22,10 +22,10 @@
 					</span>
 					Add new
 				</button>
-                <button type="submit" id="dataview-testhttp-button" class="btn btn-success">
+                <button type="submit" id="dataview-tvragehttpget-button" class="btn btn-success">
 					<span class="fa fa-plus">
 					</span>
-                    Test HTTP Get - TVRage
+                    Refresh TVRage
                 </button>
 			</div>
 			<div id="dataview-controls-search">
